--- a/demos/app/grid-column-pinning/sample.component.html
+++ b/demos/app/grid-column-pinning/sample.component.html
@@ -1,15 +1,18 @@
-<igx-grid #grid1 [data]="data" [width]="'1200px'" [height]="'800px'">
-    <igx-column  *ngFor="let c of columns" [sortable]="true" [field]="c.field" [header]="c.field" [width]="c.width" [pinned]='c.pinned' [pinLocation]='c.pinLocation' [hidden]='c.hidden'>
-    </igx-column>
-</igx-grid>
-<br />
-<button igxButton="raised" (click)="toggleColumn('ContactName')">Pin 'ContactName'</button>
-<button igxButton="raised" (click)="toggleColumn('ContactTitle')">Pin 'ContactTitle'</button>
-<button igxButton="raised" (click)="toggleColumn('CompanyName')">Pin 'CompanyName'</button>
-<button igxButton="raised" (click)="toggleColumn('City')">Pin 'City'</button>
-<button igxButton="raised" (click)="toggleColumn('Region')">Pin 'Region'</button>
-<button igxButton="raised" (click)="toggleColumn('Address')">Pin 'Address'</button>
-<br/>
-<button igxButton="raised" (click)="toggleVisibility('ID')">Visibility 'ID'</button>
-<button igxButton="raised" (click)="toggleVisibility('ContactName')">Visibility 'ContactName'</button>
-<button igxButton="raised" (click)="toggleVisibility('ContactTitle')">Visibility 'ContactTitle'</button>
+<div class="wrapper">
+    <igx-grid #grid1 [data]="data" [width]="'1000px'" [height]="'600px'">
+        <igx-column *ngFor="let c of columns" [sortable]="true" [field]="c.field" [header]="c.field" [width]="c.width" [pinned]='c.pinned'
+            [pinLocation]='c.pinLocation' [hidden]='c.hidden'>
+        </igx-column>
+    </igx-grid>
+    <br />
+    <button igxButton="raised" (click)="toggleColumn('ContactName')">Pin 'ContactName'</button>
+    <button igxButton="raised" (click)="toggleColumn('ContactTitle')">Pin 'ContactTitle'</button>
+    <button igxButton="raised" (click)="toggleColumn('CompanyName')">Pin 'CompanyName'</button>
+    <button igxButton="raised" (click)="toggleColumn('City')">Pin 'City'</button>
+    <button igxButton="raised" (click)="toggleColumn('Region')">Pin 'Region'</button>
+    <button igxButton="raised" (click)="toggleColumn('Address')">Pin 'Address'</button>
+    <br/>
+    <button igxButton="raised" (click)="toggleVisibility('ID')">Visibility 'ID'</button>
+    <button igxButton="raised" (click)="toggleVisibility('ContactName')">Visibility 'ContactName'</button>
+    <button igxButton="raised" (click)="toggleVisibility('ContactTitle')">Visibility 'ContactTitle'</button>
+</div>
