--- a/src/core/styles/components/grid/_grid-component.scss
+++ b/src/core/styles/components/grid/_grid-component.scss
@@ -24,10 +24,6 @@
         }
     }
 
-    @include e(tfoot) {
-        @extend %grid-tfoot !optional;
-    }
-
     @include e(tbody) {
         @extend %grid-tbody !optional;
 
@@ -38,10 +34,30 @@
 
     @include e(tbody, $m: empty) {
         @extend %grid-tbody--empty !optional;
-        
+
         igx-display-container {
             height: 100%;
         }
+    }
+
+    @include e(scroll) {
+        @extend %grid-scroll !optional;
+    }
+
+    @include e(scroll-start) {
+        @extend %grid-scroll-start !optional;
+    }
+
+    @include e(scroll-main) {
+        @extend %grid-scroll-main !optional;
+    }
+
+    @include e(scroll-end) {
+        @extend %grid-scroll-end !optional;
+    }
+
+    @include e(tfoot) {
+        @extend %grid-tfoot !optional;
     }
 
     @include e(tr) {
@@ -76,6 +92,14 @@
         @extend %grid-cell-number !optional;
     }
 
+    @include e(th, $m: pinned-start) {
+        @extend %grid-cell-pinned--start !optional;
+    }
+
+    @include e(th, $m: pinned-end) {
+        @extend %grid-cell-pinned--end !optional;
+    }
+
     @include e(th, $m: fw) {
         @extend %grid-cell--fixed-width !optional;
     }
@@ -90,6 +114,14 @@
 
     @include e(td, $m: number) {
         @extend %grid-cell-number !optional;
+    }
+
+    @include e(td, $m: pinned-start) {
+        @extend %grid-cell-pinned--start !optional;
+    }
+
+    @include e(td, $m: pinned-end) {
+        @extend %grid-cell-pinned--end !optional;
     }
 
     @include e(td, $m: fw) {
