--- a/src/core/styles/components/tiem-picker/_time-picker-theme.scss
+++ b/src/core/styles/components/tiem-picker/_time-picker-theme.scss
@@ -1,5 +1,30 @@
-$component-name: 'igx-time-picker';
-$components: register-component($components, #{$component-name});
+////
+/// @group themes
+/// @access public
+/// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
+////
+
+/// If only background color is specified, text/icon color
+/// will be assigned automatically to a contrasting color.
+/// Does ___not___ apply for disabled state colors.
+///
+/// @param {Color} $text-color [null] - The text color of a open time picker.
+/// @param {Color} $hover-text-color [null] - The hover text color of a open time picker.
+/// @param {Color} $selected-text-color [null] -  The text color of a selected item in time picker.
+/// @param {Color} $activeList-item-background [null] - The background color for current item in focused column inside the time picker.
+/// @param {Color} $igx-time-picker-header-background [null] - The header background color of a time picker.
+/// @param {Color} $igx-time-picker-header-hour-text-color [null] - The header hour text color of a time picker.
+/// @param {Color} $igx-time-picker-header-ampm-text-color [null] - The header AM/PM text color of a time picker.
+///
+/// @requires text-contrast
+///
+/// @example scss Change the background and text colors in  time picker
+///   $my-time-picker-theme: igx-time-picker-theme(
+///     $text-color: white,
+///     $background-color: black
+///   );
+///   // Pass the theme to the igx-time-picker component mixin
+///   @include igx-time-picker($my-button-theme);
 
 @function igx-time-picker-theme(
     $text-color: null,
@@ -7,9 +32,28 @@ $components: register-component($components, #{$component-name});
     $selected-text-color: null,
     $activeList-item-background: null,
     $igx-time-picker-header-background: null,
-    $igx-time-picker-header-text-color: null
+    $igx-time-picker-header-hour-text-color: null,
+    $igx-time-picker-header-ampm-text-color: null,
+    $background-color: null
 
 ) {
+
+
+    @if not($text-color) and $background-color {
+        $text-color: text-contrast($background-color);
+    }
+
+    @if not($igx-time-picker-header-hour-text-color) and $igx-time-picker-header-background {
+        $igx-time-picker-header-hour-text-color: text-contrast($igx-time-picker-header-background);
+    }
+
+    @if not($igx-time-picker-header-ampm-text-color) and $igx-time-picker-header-background {
+        $igx-time-picker-header-ampm-text-color: rgba(text-contrast($igx-time-picker-header-background), .8);
+    }
+
+    @if not($selected-text-color) and $activeList-item-background {
+        $selected-text-color: text-contrast($activeList-item-background);
+    }
 
     @return (
         text-color: $text-color,
@@ -17,10 +61,17 @@ $components: register-component($components, #{$component-name});
         selected-text-color: $selected-text-color,
         activeList-item-background: $activeList-item-background,
         igx-time-picker-header-background: $igx-time-picker-header-background,
-        igx-time-picker-header-text-color: $igx-time-picker-header-text-color
+        igx-time-picker-header-hour-text-color: $igx-time-picker-header-hour-text-color,
+        igx-time-picker-header-ampm-text-color: $igx-time-picker-header-ampm-text-color,
+        background-color: $background-color
     );
 }
 
+
+/// @param {Map} $theme - The theme used to style the component.
+/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
+/// @requires igx-time-picker-theme
+/// @requires igx-color
 @mixin igx-time-picker($theme, $palette: $default-palette) {
 
     $default-theme: igx-time-picker-theme(
@@ -29,7 +80,9 @@ $components: register-component($components, #{$component-name});
         $selected-text-color: igx-color($palette, 'secondary', 500),
         $activeList-item-background: igx-color($palette, 'grays', 100),
         $igx-time-picker-header-background: igx-color($palette, 'secondary', 500),
-        $igx-time-picker-header-text-color: white
+        $igx-time-picker-header-hour-text-color: white,
+        $igx-time-picker-header-ampm-text-color: rgba(255, 255, 255, .8),
+        $background-color: white
     );
 
     $this: extend($default-theme, $theme);
@@ -38,6 +91,7 @@ $components: register-component($components, #{$component-name});
         display: flex;
         padding: 10px 0;
         justify-content: center;
+        background: map-get($this, 'background-color');
     }
 
     %time-picker-display {
@@ -95,11 +149,11 @@ $components: register-component($components, #{$component-name});
         }
     }
 
-    %span {
+    %igx-time-picker__item {
         width: 54px;
         padding: 5px 10px;
         border-radius: 15px;
-        min-height: 48px;
+        height: 48px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -114,25 +168,34 @@ $components: register-component($components, #{$component-name});
         }
     }
 
-    %igx-time-picker__hourList--selected,
-    %igx-time-picker__minuteList--selected,
-    %igx-time-picker__ampmList--selected {
+    %igx-time-picker__item--selected {
         font-size: 24px;
         color: map-get($this, 'selected-text-color');
     }
 
-    %igx-time-picker__hourList--active,
-    %igx-time-picker__minuteList--active,
-    %igx-time-picker__ampmList--active {
+    %igx-time-picker__item--active {
         background: map-get($this, 'activeList-item-background');
     }
 
-    %igx-calendar__header {
-        background: map-get($this, 'igx-time-picker-header-background')
+    %igx-time-picker__header {
+        background: map-get($this, 'igx-time-picker-header-background');
+        padding: 1.5em 1em;
     }
 
-    %igx-calendar__header-text {
-        color: map-get($this, 'igx-time-picker-header-text-color')
+    %igx-time-picker__header-ampm {
+        color: map-get($this, 'igx-time-picker-header-ampm-text-color');
+        font-size: rem(16px);
+    }
+
+    %igx-time-picker__header-hour {
+        color: map-get($this, 'igx-time-picker-header-hour-text-color');
+        font-size: rem(40px);
+        display: flex;
+    }
+
+    %igx-time-picker__header-ampm,
+    %igx-time-picker__header-hour {
+        margin: 0;
     }
 }
 
