--- a/demos/app/grid-column-pinning/sample.component.html
+++ b/demos/app/grid-column-pinning/sample.component.html
@@ -1,5 +1,5 @@
 <igx-grid #grid1 [data]="data" [width]="'1200px'" [height]="'800px'">
-    <igx-column  *ngFor="let c of columns" [sortable]="true" [field]="c.field" [header]="c.field" [width]="c.width" [pinned]='c.pinned' [pinLocation]='c.pinLocation' [hidden]='c.hidden'>
+    <igx-column  *ngFor="let c of columns" [sortable]="true" [field]="c.field" [header]="c.field" [width]="c.width" [pinned]='c.pinned' [hidden]='c.hidden'>
     </igx-column>
 </igx-grid>
 <br />
