--- a/src/core/styles/components/tiem-picker/_time-picker-theme.scss
+++ b/src/core/styles/components/tiem-picker/_time-picker-theme.scss
@@ -12,9 +12,9 @@
 /// @param {Color} $hover-text-color [null] - The hover text color of a open time picker.
 /// @param {Color} $selected-text-color [null] -  The text color of a selected item in time picker.
 /// @param {Color} $activeList-item-background [null] - The background color for current item in focused column inside the time picker.
-/// @param {Color} $igx-time-picker-header-background [null] - The header background color of a time picker.
-/// @param {Color} $igx-time-picker-header-hour-text-color [null] - The header hour text color of a time picker.
-/// @param {Color} $igx-time-picker-header-ampm-text-color [null] - The header AM/PM text color of a time picker.
+/// @param {Color} $header-background [null] - The header background color of a time picker.
+/// @param {Color} $header-hour-text-color [null] - The header hour text color of a time picker.
+/// @param {Color} $header-time-period-color [null] - The header AM/PM text color of a time picker.
 ///
 /// @requires text-contrast
 ///
@@ -31,9 +31,9 @@
     $hover-text-color: null,
     $selected-text-color: null,
     $activeList-item-background: null,
-    $igx-time-picker-header-background: null,
-    $igx-time-picker-header-hour-text-color: null,
-    $igx-time-picker-header-ampm-text-color: null,
+    $header-background: null,
+    $header-hour-text-color: null,
+    $header-time-period-color: null,
     $background-color: null
 
 ) {
@@ -43,12 +43,12 @@
         $text-color: text-contrast($background-color);
     }
 
-    @if not($igx-time-picker-header-hour-text-color) and $igx-time-picker-header-background {
-        $igx-time-picker-header-hour-text-color: text-contrast($igx-time-picker-header-background);
+    @if not($header-hour-text-color) and $header-background {
+        $header-hour-text-color: text-contrast($header-background);
     }
 
-    @if not($igx-time-picker-header-ampm-text-color) and $igx-time-picker-header-background {
-        $igx-time-picker-header-ampm-text-color: rgba(text-contrast($igx-time-picker-header-background), .8);
+    @if not($header-time-period-color) and $header-background {
+        $header-time-period-color: rgba(text-contrast($header-background), .8);
     }
 
     @if not($selected-text-color) and $activeList-item-background {
@@ -60,9 +60,9 @@
         hover-text-color: $hover-text-color,
         selected-text-color: $selected-text-color,
         activeList-item-background: $activeList-item-background,
-        igx-time-picker-header-background: $igx-time-picker-header-background,
-        igx-time-picker-header-hour-text-color: $igx-time-picker-header-hour-text-color,
-        igx-time-picker-header-ampm-text-color: $igx-time-picker-header-ampm-text-color,
+        header-background: $header-background,
+        header-hour-text-color: $header-hour-text-color,
+        header-time-period-color: $header-time-period-color,
         background-color: $background-color
     );
 }
@@ -70,6 +70,7 @@
 
 /// @param {Map} $theme - The theme used to style the component.
 /// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
+/// @requires igx-time-picker
 /// @requires igx-time-picker-theme
 /// @requires igx-color
 @mixin igx-time-picker($theme, $palette: $default-palette) {
@@ -79,9 +80,9 @@
         $hover-text-color: igx-color($palette, 'secondary', 500),
         $selected-text-color: igx-color($palette, 'secondary', 500),
         $activeList-item-background: igx-color($palette, 'grays', 100),
-        $igx-time-picker-header-background: igx-color($palette, 'secondary', 500),
-        $igx-time-picker-header-hour-text-color: white,
-        $igx-time-picker-header-ampm-text-color: rgba(255, 255, 255, .8),
+        $header-background: igx-color($palette, 'secondary', 500),
+        $header-hour-text-color: white,
+        $header-time-period-color: rgba(255, 255, 255, .8),
         $background-color: white
     );
 
@@ -178,17 +179,17 @@
     }
 
     %igx-time-picker__header {
-        background: map-get($this, 'igx-time-picker-header-background');
-        padding: 1.5em 1em;
+        background: map-get($this, 'header-background');
+        padding: rem(24px) rem(16px);
     }
 
     %igx-time-picker__header-ampm {
-        color: map-get($this, 'igx-time-picker-header-ampm-text-color');
+        color: map-get($this, 'header-time-period-color');
         font-size: rem(16px);
     }
 
     %igx-time-picker__header-hour {
-        color: map-get($this, 'igx-time-picker-header-hour-text-color');
+        color: map-get($this, 'header-hour-text-color');
         font-size: rem(40px);
         display: flex;
     }
