--- a/src/dialog/dialog-content.component.html
+++ b/src/dialog/dialog-content.component.html
@@ -1,13 +1,13 @@
 <div #dialog tabindex="-1" class="igx-dialog" *ngIf="isOpen" [@fadeInOut]="state" (click)="onDialogSelected($event)">
     <div #dialogWindow class="igx-dialog__window" [@slideIn]="state" [attr.role]="role" [attr.aria-labelledby]="titleId">
-        <div [attr.id]="titleId" class="igx-dialog__window-title">
+        <div *ngIf="title" [attr.id]="titleId" class="igx-dialog__window-title">
             {{ title }}
         </div>
-        <div class="igx-dialog__window-content">
-            <div *ngIf="message">{{ message }}</div>
-            <ng-content *ngIf="!message"></ng-content>
-        </div>
-        <div class="igx-dialog__window-actions">
+
+        <div class="igx-dialog__window-content" *ngIf="message">{{ message }}</div>
+        <ng-content *ngIf="!message"></ng-content>
+
+        <div *ngIf="leftButtonLabel || rightButtonLabel" class="igx-dialog__window-actions">
             <button *ngIf="leftButtonLabel" igxButton="{{ leftButtonType }}" igxButtonColor="{{ leftButtonColor }}" igxButtonBackground="{{ leftButtonBackgroundColor }}"
                 igxRipple="{{ leftButtonRipple }}" (click)="onInternalLeftButtonSelect($event)">
                 {{ leftButtonLabel }}
@@ -17,5 +17,6 @@
                 {{ rightButtonLabel }}
             </button>
         </div>
+
     </div>
 </div>
