--- a/src/date-picker/date-picker.component.html
+++ b/src/date-picker/date-picker.component.html
@@ -1,7 +1,7 @@
-<div class="igx-date-picker">
-    <input class="igx-date-picker__input-date" igxInput (click)="onOpenEvent($event)" [value]="displayData" [disabled]="isDisabled" />
-    <igx-dialog class="igx-date-picker__dialog-popup" closeOnOutsideSelect="true"
-        [leftButtonLabel]="cancelButtonLabel" (onLeftButtonSelect)="alert.close()"
+<div [ngClass]="{'igx-date-picker': !vertical, 'igx-date-picker--vertical': vertical}">
+    <input class="igx-date-picker__input-date" igxInput (click)="onOpenEvent($event)" [value]="displayData" [disabled]="isDisabled"
+    />
+    <igx-dialog class="igx-date-picker__dialog-popup" closeOnOutsideSelect="true" [leftButtonLabel]="cancelButtonLabel" (onLeftButtonSelect)="alert.close()"
         [rightButtonLabel]="todayButtonLabel" (onRightButtonSelect)="triggerTodaySelection()">
         <ng-container #container></ng-container>
     </igx-dialog>
