--- a/src/core/styles/components/checkbox/_checkbox-theme.scss
+++ b/src/core/styles/components/checkbox/_checkbox-theme.scss
@@ -65,98 +65,136 @@
         $this: extend($dark-theme, $theme);
     }
 
-    $input-font-size: rem(16px);
-    $input-font-weight: 400;
+    $cbx-label-font-size: em(16px);
+    $cbx-size: em(20px);
+    $cbx-border-width: 2px;
+    $cbx-label-margin: em(8px);
+    $cbx-radius: 2px;
 
-    $checkbox-min-width: 20px;
-    $checkbox-height: $checkbox-min-width;
-    $checkbox-label-padding: rem(24px, 16px);
-    $checkbox-radius: 2px;
-    $checkbox-border-style: 2px solid;
-    $checkbox-tick-width: 20px;
-    $checkbox-tick-height: 20px;
-    $checkbox-tick-weight: 3px;
-    $checkbox-tick-padding: 3px 2px 2px;
+    $cbx-mark-stroke: 3;
+    $cbx-mark-length: 24;
+    $cbx-mark-x-factor: $cbx-mark-stroke / $cbx-mark-length;
+
+    $cbx-ripple-size: em(48px);
+    $cbx-ripple-radius: $cbx-ripple-size / 2;
 
     @include scale-in-center();
 
-    %igx-cbx-lbl-display {
-        display: inline-block;
-        position: relative;
-        cursor: pointer;
-        min-width: $checkbox-min-width;
-        min-height: $checkbox-height;
-        line-height: $checkbox-height;
-        font-size: $input-font-size;
-        font-weight: $input-font-weight;
-        color: map-get($this, 'label-color');
+    %cbx-display {
+        display: inline-flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        font-size: rem(16px);
+    }
+
+    %cbx-display--disabled {
         user-select: none;
+        pointer-events: none;
+        cursor: initial;
+    }
+
+    %cbx-composite {
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+        width: $cbx-size;
+        height: $cbx-size;
+        border-width: $cbx-border-width;
+        border-style: solid;
+        border-color: map-get($this, 'empty-color');
+        border-radius: $cbx-radius;
         -webkit-tap-highlight-color: transparent;
-        overflow: hidden;
-        padding-left: $checkbox-label-padding;
+        transition: border-color .2s $ease-out-quad;
 
         &::after {
             position: absolute;
             content: '';
             top: 0;
+            right: 0;
+            bottom: 0;
             left: 0;
-            border-radius: $checkbox-radius;
+            transition: background .2s $ease-out-quad;
         }
     }
 
-    %igx-cbx-lbl-box {
-        width: $checkbox-min-width;
-        height: $checkbox-height;
+    %cbx-composite--x {
+        border-color: map-get($this, 'fill-color');
+
+        &::after {
+            background: map-get($this, 'fill-color');
+        }
     }
 
-    %igx-cbx-lbl-tick {
+    %cbx-composite--disabled {
+        border-color: map-get($this, 'disabled-color');
+    }
+
+    %cbx-composite--x--disabled {
+        &::after {
+            background: map-get($this, 'disabled-color');
+        }
+    }
+
+    %cbx-composite-mark {
         position: absolute;
         top: 0;
+        right: 0;
+        bottom: 0;
         left: 0;
-        width: $checkbox-tick-width;
-        height: $checkbox-tick-height;
-        padding: $checkbox-tick-padding;
-        stroke: none;
-        stroke-linecap: round;
-        stroke-width: $checkbox-tick-weight;
-        fill: none;
-        z-index: 1;
-    }
-
-    %igx-cbx-lbl-checked-tick {
-        @include animation('scale-in-center' .3s $ease-out-back both);
         stroke: map-get($this, 'tick-color');
+        stroke-linecap: round;
+        stroke-width: $cbx-mark-stroke;
+        stroke-dasharray: $cbx-mark-length;
+        stroke-dashoffset: $cbx-mark-length;
+        fill: none;
+        opacity: 0;
+        z-index: 1;
+        transition: opacity .1s $ease-out-quad;
     }
 
-    %igx-cbx-lbl-unchecked-after {
-        @extend %igx-cbx-lbl-box;
-        border: $checkbox-border-style map-get($this, 'empty-color');
+    %cbx-composite-mark--x {
+        stroke-dashoffset: 0;
+        opacity: 1;
+        transition: all .2s $ease-out-quad, opacity .2s $ease-out-quad;
     }
 
-    %igx-cbx-lbl-checked-after {
-        @extend %igx-cbx-lbl-box;
-        background-color: map-get($this, fill-color);
-        border: $checkbox-border-style map-get($this, 'fill-color');
+    %cbx-composite-mark--in {
+        stroke-dashoffset: 41; /* length of path - adjacent line length */
+        opacity: 1;
+        transform: rotate(45deg) translateX(-#{$cbx-mark-x-factor}em);
     }
 
-    %igx-cbx-lbl-disabled {
+    %cbx-label {
+        display: inline-block;
+        color: map-get($this, 'label-color');
+        font-size: $cbx-label-font-size;
+        line-height: 1;
+        margin-left: $cbx-label-margin;
+        cursor: pointer;
+        user-select: none;
+        word-wrap: break-all;
+
+        &:empty {
+            margin: 0;
+        }
+    }
+
+    %cbx-label--disabled {
         color: map-get($this, 'disabled-color');
+    }
+
+    %cbx-ripple {
+        @include igx-ripple((
+            color: map-get($this, 'fill-color')
+        ));
+        position: absolute;
+        top: calc(50% - #{$cbx-ripple-radius});
+        left: calc(50% - #{$cbx-ripple-radius});
+        width: $cbx-ripple-size;
+        height: $cbx-ripple-size;
+        border-radius: $cbx-ripple-radius;
+        overflow: hidden;
         pointer-events: none;
-    }
-
-    %igx-cbx-lbl-checked--disabled-after {
-        background-color: map-get($this, 'disabled-color');
-        border-color: map-get($this, 'disabled-color');
-    }
-
-    %igx-cbx-lbl-unchecked--disabled-after {
-        border-color: map-get($this, 'disabled-color');
-    }
-
-    %igx-cbx-lbl--indeterminate-after {
-        background-color: map-get($this, 'fill-color');
-        border: $checkbox-border-style map-get($this, 'fill-color');
+        filter: opacity(1);
     }
 }
-
-
